--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthenticationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleManager.cs" />
     <Compile Include="UserManager.cs" />
