--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Common\PagingParameter.cs" />
     <Compile Include="Country.cs" />
     <Compile Include="Enum\Activity.cs" />
+    <Compile Include="Enum\ClaimType.cs" />
     <Compile Include="Enum\SearchMode.cs" />
     <Compile Include="Enum\SortOrder.cs" />
     <Compile Include="Common\SortParameter.cs" />
