--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -64,6 +64,8 @@
     <Compile Include="InvalidTenantException.cs" />
     <Compile Include="NullArgumentException.cs" />
     <Compile Include="Page\DuplicatePageFoundException.cs" />
+    <Compile Include="Page\DuplicatePageWidgetFoundException.cs" />
+    <Compile Include="Page\PageNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryStoreNotAccessibleException.cs" />
     <Compile Include="Role\DuplicateRoleFoundException.cs" />
