--- a/API/API.csproj
+++ b/API/API.csproj
@@ -263,6 +263,9 @@
     <None Include="Properties\PublishProfiles\nis-api - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nis-api - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nis-api - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
