--- a/API/Web.config
+++ b/API/Web.config
@@ -35,7 +35,8 @@
     <add key="SMTPPort" value="587"/>
 
     <!-- for PRD Server -->
-    <add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />
+    <!--<add key="ChangePasswordLink" value="https://nis-app.azurewebsites.net/confirmuser?token=" />-->
+    <add key="ChangePasswordLink" value="https://nisqa-api.azurewebsites.net/confirmuser?token=" />
 
     <!-- for QA Server -->
     <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token="/>-->
