--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -38,6 +38,7 @@
     "jqwidgets-ng": "^8.3.2",
     "moment": "^2.24.0",
     "ng-dynamic-component": "^5.0.0",
+    "ng-multiselect-dropdown": "^0.2.10",
     "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^4.3.0",
     "ngx-owl-carousel": "^2.0.7",
