--- a/API/API.csproj
+++ b/API/API.csproj
@@ -244,6 +244,7 @@
     <Compile Include="Container\Container.cs" />
     <Compile Include="Container\IocContainer.cs" />
     <Compile Include="Container\UnityResolverService.cs" />
+    <Compile Include="Controllers\AssetSettingController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\AssetLibraryController.cs" />
     <Compile Include="Controllers\WidgetController.cs" />
