--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetSettingManager.cs" />
     <Compile Include="AssetLibraryManager.cs" />
     <Compile Include="AuthenticationManager.cs" />
     <Compile Include="PageManager.cs" />
