--- a/GenerateStatementRenderEngine/Web.config
+++ b/GenerateStatementRenderEngine/Web.config
@@ -13,7 +13,7 @@
   <connectionStrings>
 
     <!-- for Local Server -->
-    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS_DEV;User ID=nis_admin;Password=Websym@123" />
+    <add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=NIS_DEV2;User ID=nis_admin;Password=Gauch022$" />
     
     <!-- for QA Server -->
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS_DEV;User ID=websym;Password=Admin@123" />-->
