--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -115,6 +115,8 @@
     <Compile Include="NedBank\InvestorPerformance.cs" />
     <Compile Include="NedBank\ProductViewModel.cs" />
     <Compile Include="NedBank\ProductPageTypeMappingViewModel.cs" />
+    <Compile Include="NedBank\ScheduleListModel.cs" />
+    <Compile Include="NedBank\ScheduleModel.cs" />
     <Compile Include="NedBank\StatementViewModel.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageWidget.cs" />
