--- a/azure-pipelines-8.yml
+++ b/azure-pipelines-8.yml
@@ -32,8 +32,8 @@ steps:
     version: '16.16.0'  # Specify the desired Node.js version (e.g., 16.x)
 
 - script: |
-    npm install -g npm@8.11.0 
-    npm install
+    npm install -g npm@8.11.0 --force
+    npm install --force
     npm install typescript@3.5.3
     npm cache clean --force
     npm run build
