--- a/azure-pipelines-8.yml
+++ b/azure-pipelines-8.yml
@@ -32,10 +32,12 @@ steps:
     version: '16.16.0'  # Specify the desired Node.js version (e.g., 16.x)
 
 - script: |
-    npm install -g npm@8.11.0 --force
-    npm install --force
+    npm install -g npm@8.11.0
+    npm install -g npm-force-resolutions
     npm install typescript@3.5.3
     npm cache clean --force
+    npm-force-resolutions
+    npm install
     npm run build
   displayName: 'Build Angular'
   
