--- a/azure-pipelines-8.yml
+++ b/azure-pipelines-8.yml
@@ -33,7 +33,7 @@ steps:
 
 - script: |
     npm install -g npm@8.11.0
-    npm install -g npm-force-resolutions
+    npm install --legacy-peer-deps
     npm install typescript@3.5.3
     npm cache clean --force
     npm-force-resolutions
