--- a/azure-pipelines-8.yml
+++ b/azure-pipelines-8.yml
@@ -33,11 +33,11 @@ steps:
 
 - script: |
     npm install -g npm@8.11.0
-    npm install --legacy-peer-deps
+    npm install -g npm-force-resolutions
     npm install typescript@3.5.3
     npm cache clean --force
-    npm-force-resolutions
-    npm install
+    npm-force-resolutions --package-lock-only
+    npm install --force
     npm run build
   displayName: 'Build Angular'
   
