--- a/azure-pipelines-9.yml
+++ b/azure-pipelines-9.yml
@@ -12,9 +12,9 @@ pr:
     - main
 
   paths:
-    include:
-      - API/*  # Path to your .NET project folder
- 
+    exclude:
+      - APP/ClientApp/*
+       
 pool:
   vmImage: 'windows-2019'
 
@@ -53,8 +53,3 @@ steps:
   inputs:
     PathtoPublish: $(build.artifactstagingdirectory)
     ArtifactName: 'PublishBuildArtifacts'
-  
-- checkout: self
-  persistCredentials: true
-  clean: true
-  path: API
