--- a/azure-pipelines-11.yml
+++ b/azure-pipelines-11.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'windows-2019'
 
 variables:
-  solution: '**/*.sln'
+  solution: '**/API.sln'
   projects: |
     **/*.csproj
     !**/App.csproj
